# aethergrim

./: Makefile  README.md  limine.cfg
iso_root/: kernel.elf  limine.cfg
kernel/: Cargo.toml  linker.ld  x86_64-aether.json
kernel/assets/: aeg_logo.raw  aether.raw  eventide.raw  grimreaper.raw
kernel/src/: allocator.rs  main.rs
kernel/src/arch/x86_64/: gdt.rs  idt.rs  mod.rs  pic.rs  process.rs  serial.rs  timer.rs
kernel/src/arch/x86_64/memory/: mod.rs  paging.rs  pmm.rs
kernel/src/drivers/: mod.rs
kernel/src/drivers/audio/: intel_hda.rs  mod.rs
kernel/src/drivers/legacy/: keyboard.rs  mouse.rs
kernel/src/drivers/pci/: mod.rs
kernel/src/drivers/usb/: mod.rs  xhci.rs
kernel/src/gui/: compositor.rs  mod.rs  splash.rs  utils.rs  window.rs
kernel/src/gui/assets/: cursor.rs
kernel/src/gui/grimbox/: grimbox.rs  mod.rs
