[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
limine = "0.1.12"
x86_64 = "0.14.13"
spin = "0.9.8"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
pic8259 = "0.10.1"
uart_16550 = "0.3"
linked_list_allocator = "0.10.5"
crossbeam-queue = { version = "0.3.12", default-features = false, features = ["alloc"] }